--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,9 @@ edition = "2018"
 #autobins = false
 
 [dependencies]
+hashers = "1.0.1"
 libc = "0.2"
 lua-sys = "0.2.0"
+once_cell = "1.14.0"
 sdl2-sys = "0.35.2"
 stb_truetype_rust = "1.26.1"
